// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test1: Test 1 simple valid ADD ACTION Should have no error 1`] = `1`;

exports[`test1: Test 1 simple valid ADD ACTION Should have no error 2`] = `40`;

exports[`test1: Test 1 simple valid ADD ACTION Should have no error 3`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "TO clause incomplete in the current SCL",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 40,
    "starti": 1,
  },
]
`;

exports[`test2: Test 1 simple INvalid ADD ACTION Should have error 1`] = `51`;

exports[`test2: Test 1 simple INvalid ADD ACTION Should have error 2`] = `52`;

exports[`test2: Test 1 simple INvalid ADD ACTION Should have error 3`] = `1`;

exports[`test2: Test 1 simple INvalid ADD ACTION Should have error 4`] = `52`;

exports[`test2: Test 1 simple INvalid ADD ACTION Should have error 5`] = `51`;

exports[`test2: Test 1 simple INvalid ADD ACTION Should have error 6`] = `52`;

exports[`test2: Test 1 simple INvalid ADD ACTION Should have error 7`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Require a valid value to be specified",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 52,
    "starti": 51,
  },
  Object {
    "diagnostic": Object {
      "message": "TO clause incomplete in the current SCL",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 52,
    "starti": 1,
  },
  Object {
    "diagnostic": Object {
      "message": "Invalid value specified",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 52,
    "starti": 51,
  },
]
`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 1`] = `1`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 2`] = `66`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 3`] = `1`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 4`] = `66`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 5`] = `38`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 6`] = `41`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 7`] = `101`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 8`] = `105`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 9`] = `120`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 10`] = `129`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 11`] = `130`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 12`] = `133`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 13`] = `68`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 14`] = `151`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 15`] = `68`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 16`] = `151`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 17`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "FROM clause incomplete in the current SCL",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 66,
    "starti": 1,
  },
  Object {
    "diagnostic": Object {
      "message": "TO clause incomplete in the current SCL",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 66,
    "starti": 1,
  },
  Object {
    "diagnostic": Object {
      "message": "Invalid value specified",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 41,
    "starti": 38,
  },
]
`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 18`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 105,
    "starti": 101,
  },
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 129,
    "starti": 120,
  },
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 133,
    "starti": 130,
  },
  Object {
    "diagnostic": Object {
      "message": "FROM clause incomplete in the current SCL",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 151,
    "starti": 68,
  },
  Object {
    "diagnostic": Object {
      "message": "TO clause incomplete in the current SCL",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 151,
    "starti": 68,
  },
]
`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 1`] = `24`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 2`] = `28`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 3`] = `53`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 4`] = `62`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 5`] = `63`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 6`] = `66`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 7`] = `83`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 8`] = `91`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 9`] = `92`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 10`] = `99`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 11`] = `0`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 12`] = `111`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 13`] = `0`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 14`] = `111`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 15`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 28,
    "starti": 24,
  },
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 62,
    "starti": 53,
  },
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 66,
    "starti": 63,
  },
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 91,
    "starti": 83,
  },
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 99,
    "starti": 92,
  },
  Object {
    "diagnostic": Object {
      "message": "FROM clause incomplete in the current SCL",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 111,
    "starti": 0,
  },
  Object {
    "diagnostic": Object {
      "message": "TO clause incomplete in the current SCL",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 111,
    "starti": 0,
  },
]
`;
